<?xml version="1.0"?>
<package format="2">
  <name>task2</name>
  <version>0.0.0</version>
  <description>The task2 package</description>

  <maintainer email="aman@todo.todo">aman</maintainer>


 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>


  <build_depend> obstacle_detector </build_depend>




</package>
